Added sample client and cluster service